# BRDFA_Engine

./: .gitignore  README.md
BRDFA_Engine/: CMakeLists.txt  README.md
BRDFA_Engine/shaders/: basic.spv  frag.spv  main.frag  main.vert  minimal.frag  shader.frag  shader.vert  shader_compiler.bat  skybox.frag  skybox.frag.spv  skybox.vert  skybox.vert.spv  vert.spv
BRDFA_Engine/shaders/brdfs/: CT_geometric_att.brdf  CT_original.brdf  beckmann_distrib.brdf  blinn_phong.brdf  cts.brdf  diffuse.brdf  gsmith_attenuation.brdf  oren_nayar.brdf  phong.brdf  reflection.brdf  schlick_fresnel.brdf  ts_geom_attenuation.brdf
BRDFA_Engine/shaders/legacy/: shader.vert
BRDFA_Engine/src/: brdfa_callbacks.cpp  brdfa_callbacks.hpp  brdfa_commander_abs.hpp  brdfa_cons.hpp  brdfa_descriptor_abs.hpp  brdfa_device_abs.hpp  brdfa_engine.cpp  brdfa_engine.hpp  brdfa_functions.hpp  brdfa_g_pipeline_abs.hpp  brdfa_instance_abs.hpp  brdfa_mesh_abs.hpp  brdfa_render_api.hpp  brdfa_structs.hpp  brdfa_swap_image_abs.hpp  brdfa_vulkan_api.cpp  brdfa_vulkan_api.hpp  main.cpp
BRDFA_Engine/src/helpers/: commander_abs.cpp  descriptor_abs.cpp  device_abs.cpp  extra.cpp  functions.hpp  g_pipeline_abs.cpp  instance_abs.cpp  mesh_abs.cpp  swap_image_abs.cpp
BRDFA_Engine/utils/imgui/: imgui.cpp  imgui.h  imgui_internal.h  imgui_widgets.cpp  imstb_truetype.h
BRDFA_Engine/utils/imgui_text_editor/: TextEditor.cpp
Matlab_Analysis/: README.md
Matlab_Analysis/cook_torrance/: cook_torrance.m  cook_torrance_vectors.m  distribution_beckmann.m  draw_cook_vectors.m  fresnel_cook_torrance.m  geometric_cook_torrance.m  schlick_fresnel.m  testing_cook_torrance.m
Matlab_Analysis/distribution_functions/: beckmann.m  blinn.m  testing.m  trowbridge.m
Matlab_Analysis/geometric_functions/: cook_torrance.m  implicit.m  kelemen.m  neumann.m  smith_beckmann.m  smith_ggx.m  smith_schlick_ggx.m  testing_roughness_independent.m  testing_smith_beckmann.m  testing_smith_ggx.m  testing_smith_schlick_ggx.m
Matlab_Analysis/lafortune/: lafortune.m
Matlab_Analysis/oren_nayar/: testing_oren_nayar.m
Matlab_Analysis/phong/: blinn_phong_testing.m  phong_testing.m  phong_testing_2.m
Matlab_Analysis/torrance_sparrow/: A_torrance_sparrow_orig.m  A_torrance_sparrow_simp.m  abstract_torrance_geom.m  geometric_attenuation_torrance_sparrow.m  geometric_attenuation_torrance_sparrow_vector.m  simplifying_ts_a.m  testing_torrance_sparrow.m
Matlab_Analysis/ward/: draw_axis.m  draw_ward_vectors.m  testing_ward.m  ward_distribution_vector.m
